Remove metrics stack, monitoring, and fake landing stats
- Delete metrics-exporter/ (Python sidecar) and monitoring/ (Prometheus+Grafana)
- Remove ServerMetricsService, PlayerActivityTracker, MetricsController, ServerMetricsResponse
- Strip prometheus sidecar container from K8s deployment builder
- Remove MeterRegistry from IdleServerReaper
- Remove prometheus config from application.yml, SecurityConfig, pom.xml
- Remove fake stats (99.9%, <15ms, 50K+, 2M+) from Landing page
- Remove metrics polling hook, MetricChart, fetchMetrics from frontend
- Strip Prometheus/Grafana from docker-compose.yml, k8s manifests, CI workflows
- Clean up README references
- Add nul to .gitignore (Windows reserved name)