@@ -14,7 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 public class FriendshipService {
@@ -151,7 +151,7 @@ public class FriendshipService {
         List<Friendship> friendships = friendshipRepository.findFriendshipsByUserIdAndStatus(currentUserId, FriendshipStatus.ACCEPTED);
         return friendships.stream()
                 .map(f -> mapToResponse(f, currentUserId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
